--- a/src/main/resources/templates/start-exam.html
+++ b/src/main/resources/templates/start-exam.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,6 @@
     <script language="JavaScript" th:src="@{/js/course.js}" type="text/javascript"></script>
 </head>
 
-<body class="container">
 <dev class="container borderradius10px" id="heading">
     <dev class="container" id="loginbuttonDiv">
         <a class="marginleft10px" href="/sign-up">
@@ -40,88 +39,83 @@
     </dev>
 </dev>
 
-
-<dev class="container borderradius10px " id="mainDiv">
-
-    <h1 class="formh1" th:text="${exam.getTitle()}">Exam title</h1>
-
-    <hr class="formhrsep">
-    <br>
-
-    <Div class="container course2 borderradius10px">
-
-        <dev class="container courseDateTime">
-            <span th:text="${'Duration: '+exam.getDuration()+' minutes'}">Duration: 20 minutes</span>
-        </dev>
-        <dev class="container courseDateTime">
-            <span id="examScore" th:text="${'Exam Score: '+examScore}">exam Score: 22</span>
-        </dev>
-        <dev class="container description" sec:authorize="hasRole('teacher')">
-            <span th:text="${exam.getDescription()}">bluh bluh...</span>
-        </dev>
-
-        <dev class="container courseDateTime" sec:authorize="hasRole('teacher')">
-            <a class="marginleft10px" th:href="${'/exam/question-type?examId='+exam.getId()}">
-                <button class="btn" type="submit">Add Question</button>
-            </a>
-        </dev>
-    </Div>
-</dev>
-
+<body class="container">
 <dev class="container borderradius10px" id="mainDiv" th:if="${questions.size()>0}">
 
-    <input name="examId" th:value="${exam.getId()}" type="hidden"/>
+    <input name="studentExamAnswerId" th:value="${studentExamAnswerId}" type="hidden"/>
 
     <h1 class="formh1">Question List</h1>
 
     <hr class="formhrsep">
 
-    <div class="container ticketA borderradius10px">
-        <div class="container width25pc">
-            <span class="fromTo">ID</span>
-        </div>
-        <div class="container width25pc">
-            <span class="fromTo">Title</span>
-        </div>
-        <div class="container width25pc">
-            <span class="fromTo">Question Type</span>
-        </div>
-        <div class="container width25pc">
-            <span class="fromTo">score</span>
-        </div>
-        <!--        <div class="container width25pc">-->
-        <!--            <span class="fromTo">Question</span>-->
-        <!--        </div>-->
+    <!--    <div class="container ticketA borderradius10px">-->
+    <!--        <div class="container width25pc">-->
+    <!--            <span class="fromTo">ID</span>-->
+    <!--        </div>-->
+    <!--        <div class="container width25pc">-->
+    <!--            <span class="fromTo">Title</span>-->
+    <!--        </div>-->
+    <!--        <div class="container width25pc">-->
+    <!--            <span class="fromTo">Question Type</span>-->
+    <!--        </div>-->
+    <!--        <div class="container width25pc">-->
+    <!--            <span class="fromTo">score</span>-->
+    <!--        </div>-->
+    <!--        &lt;!&ndash;        <div class="container width25pc">&ndash;&gt;-->
+    <!--        &lt;!&ndash;            <span class="fromTo">Question</span>&ndash;&gt;-->
+    <!--        &lt;!&ndash;        </div>&ndash;&gt;-->
 
-        <div class="container width25pc">
+    <!--        <div class="container width25pc">-->
+    <!--            &nbsp;-->
+    <!--        </div>-->
+    <!--    </div>-->
+
+    <!--         th:if="${!question.getQuestionType().equals('MultipleChoice')}"-->
+    <div class="container questionOnExam borderradius10px" th:each="question, itemStat : ${questions}"
+         th:id="${'question'+ question.getId()}">
+        <div class="container questionText">
+            <span class="fromTo" th:text="${question.getQuestion()}">Question</span>
+        </div>
+
+
+        <div class="container questionText" th:if="${question.getQuestionType().equals('Descriptive')}">
+            <input class="input" th:id="${'studentAnswerQId'+question.getId()}"
+                   th:name="${'studentAnswerQId'+question.getId()}"
+                   th:value="${question.getStudentAnswer()}"
+                   type="text">
+        </div>
+        <div>
             &nbsp;
         </div>
+        <div class="container questionText" th:if="${question.getQuestionType().equals('Descriptive')}">
+            <input class="btn btn-submit" name="saveQuestion" th:id="${question.getId()}"
+                   type="button" value="save">
+        </div>
+
+        <div class="container questionText" th:if="${question.getQuestionType().equals('MultipleChoice')}">
+
+
+            <div class="container" th:each="choice, itemStat2 : ${question.getChoices()}"
+                 th:id="${'choiceDiv'+__${itemStat2.index}__}">
+                <div class="container">
+                    <input class="choiceRadio" th:id="${'studentAnswerQId'+__${itemStat2.index}__}"
+                           th:name="${'studentAnswerQId'+question.getId()}"
+                           th:value="${__${itemStat2.index}__}"
+                           type="radio">
+                </div>
+                <div class="container AnswerText">
+                    <label th:for="${'studentAnswerQId'+__${itemStat2.index}__}" th:text="${choice}"></label>
+                </div>
+            </div>
+
+
+        </div>
+
     </div>
 
-    <div class="container ticketA borderradius10px" th:each="questionAnswer: ${questions}"
-         th:id="${'question'+ questionAnswer.getId()}">
-        <div class="container width25pc">
-            <span class="fromTo" th:text="${question.getQuestion().getQuestionType()}">question Type</span>
-        </div>
-        <div class="container width25pc">
-            <span class="fromTo" th:id="${'score'+question.getId()}" th:text="${question.getScore()}">score</span>
-        </div>
-        <!--        <div class="container width25pc">-->
-        <!--            <span class="fromTo" th:text="${question.getQuestion()}">question</span>-->
-        <!--        </div>-->
 
-        <div class="container width25pc">
-            <!--            <a class="marginright10px" th:href="${'/question?id='+ question.getId()}">-->
-            <!--                <button class="btn btn-submit" type="submit">Edit</button>-->
-            <!--            </a>-->
-
-            <input class="btn btn-submit" name="remove_question" th:id="${question.getId()}"
-                   type="button" value="remove">
-
-        </div>
-
-    </div>
 </dev>
+
 
 <footer class="container borderradius10px">
     <label>©Unimak</label>
