--- a/src/main/resources/static/css/ticketStyle.css
+++ b/src/main/resources/static/css/ticketStyle.css
@@ -65,10 +65,10 @@
 }
 
 .questionText {
-    padding-left: 1%;
-    width: 90%;
+    padding: 1%;
     height: 50px;
     align-items: start;
+    justify-content: space-between;
 }
 
 .ticketPointer {
