--- a/src/main/resources/templates/teacher-course.html
+++ b/src/main/resources/templates/teacher-course.html
@@ -69,33 +69,33 @@
     <hr class="formhrsep">
 
     <div class="container ticketA borderradius10px">
-        <div class="container width25pc">
+        <div class="container width20pc">
             <span class="fromTo">id</span>
         </div>
-        <div class="container width25pc">
+        <div class="container width20pc">
             <span class="fromTo">title</span>
         </div>
-        <div class="container width25pc">
+        <div class="container width20pc">
             <span class="fromTo">duration</span>
         </div>
 
-        <div class="container width25pc">
+        <div class="container width40pc">
             &nbsp;
         </div>
     </div>
 
     <div class="container ticketA borderradius10px" th:each="exam: ${exams}"
          th:id="${'exam'+ exam.getId()}">
-        <div class="container width25pc">
+        <div class="container width20pc">
             <span class="fromTo" th:text="${exam.getId()}">id</span>
         </div>
-        <div class="container width25pc">
+        <div class="container width20pc">
             <span class="fromTo" th:text="${exam.getTitle()}">title</span>
         </div>
-        <div class="container width25pc">
+        <div class="container width20pc">
             <span class="fromTo" th:text="${exam.getDuration()}">duration</span>
         </div>
-        <div class="container width25pc">
+        <div class="container width40pc">
             <a class="marginright10px" th:href="${'/exam/questions?examId='+ exam.getId()}">
                 <button class="btn btn-submit" type="submit">Questions</button>
             </a>
@@ -104,8 +104,13 @@
                 <button class="btn btn-submit" type="submit">Edit</button>
             </a>
 
+            <a class="marginright10px" th:href="${'/exam-students-answers?examId='+ exam.getId()}">
+                <button class="btn btn-submit" type="submit">students</button>
+            </a>
+
             <input class="btn btn-submit" name="trashcan" th:id="${exam.getId()}"
                    type="button" value="delete">
+
 
         </div>
 
