--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -159,7 +159,7 @@
 .choiceGroup {
     /*position: relative;*/
     /*margin: 45px 0;*/
-    flex-direction: row;
+    flex-direction: column;
     /*left: -10px;*/
 }
 
