--- a/src/main/resources/templates/exam-students-answers.html
+++ b/src/main/resources/templates/exam-students-answers.html
@@ -44,7 +44,8 @@
     <hr class="hr">
     <!-- </dev> -->
 
-    <div class="container ticketA borderradius10px" th:each="user: ${studentExamAnswersDTOS}">
+    <a class="container ticketA borderradius10px" th:each="user: ${studentExamAnswersDTOS}"
+       th:href="${'/examAnswer?examAnswerId='+user.getExamAnswerId()}">
         <dev class="container ticketFromTo">
 
                 <span class="fromTo" th:text="${user.getStudentFullName()}">
@@ -55,7 +56,7 @@
             <span th:text="${'Exam Id: '+user.getExamId()}"></span>
             <span th:text="${'Exam Answer ID: '+user.getExamId()}"></span>
         </dev>
-    </div>
+    </a>
 </dev>
 <footer class="container borderradius10px">
     <label>©Unimak</label>
