--- a/src/main/resources/templates/correct-exam.html
+++ b/src/main/resources/templates/correct-exam.html
@@ -22,7 +22,6 @@
 
     <script language="JavaScript" th:src="@{/js/course.js}" type="text/javascript"></script>
     <script language="JavaScript" th:src="@{/js/exam.js}" type="text/javascript"></script>
-    <script language="JavaScript" th:src="@{/js/timer.js}" type="text/javascript"></script>
 </head>
 
 
@@ -50,8 +49,6 @@
 <dev class="container borderradius10px" id="mainDiv" th:if="${questions.size()>0}">
 
     <input name="studentExamAnswerId" th:value="${studentExamAnswerId}" type="hidden"/>
-    <input name="endTime" th:value="${endTime}" type="hidden"/>
-
     <h1 class="formh1">Question List</h1>
 
     <hr class="formhrsep">
@@ -60,39 +57,46 @@
          th:id="${'question'+ question.getId()}">
         <div class="container questionText">
             <span class="fromTo" th:text="${question.getQuestion()}">Question</span>
-            <span class="fromTo" th:text="${question.getMaxScore()+' points'}">12 points</span>
+            <div class="container choiceGroup alignCenter">
+                <span class="fromTo"
+                      th:text="${'max score: '+question.getMaxScore()+' points'}">max score: 12 points</span>
+                <span class="fromTo" th:text="${'student score: '+question.getScore()+' points'}">student score: 10 points</span>
+            </div>
         </div>
 
 
         <div class="container questionText" th:if="${question.getQuestionType().equals('Descriptive')}">
-            <input class="input" th:id="${'studentAnswerQId'+question.getId()}"
-                   th:name="${'studentAnswerQId'+question.getId()}"
-                   th:value="${question.getStudentAnswer()}"
-                   maxlength="2000" type="text">
+            <p th:text="${'student answer: '+question.getStudentAnswer()}"></p>
+
+            <!--            <input class="input" th:id="${'studentAnswerQId'+question.getId()}"-->
+            <!--                   th:name="${'studentAnswerQId'+question.getId()}"-->
+            <!--                   th:value="${question.getStudentAnswer()}"-->
+            <!--                   maxlength="2000" type="text">-->
         </div>
         <div>
             &nbsp;
         </div>
         <div class="container questionText" th:if="${question.getQuestionType().equals('Descriptive')}">
             <input class="btn btn-submit" name="saveQuestion" th:id="${question.getId()+','+questionNumber.index}"
-                   type="button" value="save">
+                   type="button" value="save score">
         </div>
 
-        <!--        <div class="container questionText" >-->
 
         <div class="container choices" th:each="choice, choiceIndex : ${question.getChoices()}"
              th:id="${'choiceDiv'+__${choiceIndex.index}__}"
              th:if="${question.getQuestionType().equals('MultipleChoice')}">
             <div class="container choiceGroup2">
-                <input class="container choiceAnswer"
-                       checked
+                <input checked
+                       class="container choiceAnswer"
+                       disabled
                        th:id="${question.getId()+','+__${questionNumber.index}__+','+__${choiceIndex.index}__}"
-                       th:value="${__${choiceIndex.index}__}"
                        th:if="${question.isAnswerSelected(__${choiceIndex.index}__)}"
                        th:name="${'studentAnswerQIdC'+question.getId()}"
+                       th:value="${__${choiceIndex.index}__}"
                        type="radio"
                 >
                 <input class="container choiceAnswer"
+                       disabled
                        th:id="${question.getId()+','+__${questionNumber.index}__+','+__${choiceIndex.index}__}"
                        th:if="${!question.isAnswerSelected(__${choiceIndex.index}__)}"
                        th:name="${'studentAnswerQIdC'+question.getId()}"
@@ -107,13 +111,7 @@
             </div>
         </div>
 
-
-        <!--        </div>-->
-
     </div>
-
-    <input class="btn btn-submit" name="finishExam"
-           type="button" value="finish">
 
 </dev>
 
