--- a/src/main/resources/static/css/ticketStyle.css
+++ b/src/main/resources/static/css/ticketStyle.css
@@ -86,6 +86,14 @@
     justify-content: space-between;
 }
 
+.questionScoreInput {
+    padding: 1% 0;
+    height: 50px;
+    align-items: center;
+    justify-content: start;
+    margin: 15px;
+}
+
 .ticketPointer {
     width: 98.5%;
     height: max-content;
