--- a/src/main/resources/templates/correct-exam.html
+++ b/src/main/resources/templates/correct-exam.html
@@ -20,8 +20,7 @@
     <script crossorigin="anonymous" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
             src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
-    <script language="JavaScript" th:src="@{/js/course.js}" type="text/javascript"></script>
-    <script language="JavaScript" th:src="@{/js/exam.js}" type="text/javascript"></script>
+    <script language="JavaScript" th:src="@{/js/correctExam.js}" type="text/javascript"></script>
 </head>
 
 
@@ -60,25 +59,28 @@
             <div class="container choiceGroup alignCenter">
                 <span class="fromTo"
                       th:text="${'max score: '+question.getMaxScore()+' points'}">max score: 12 points</span>
-                <span class="fromTo" th:text="${'student score: '+question.getScore()+' points'}">student score: 10 points</span>
+                <span class="fromTo" th:id="${'spanScore'+question.getId()}"
+                      th:text="${'student score: '+question.getScore()+' points'}">student score: 10 points</span>
             </div>
         </div>
 
 
         <div class="container questionText" th:if="${question.getQuestionType().equals('Descriptive')}">
             <p th:text="${'student answer: '+question.getStudentAnswer()}"></p>
-
-            <!--            <input class="input" th:id="${'studentAnswerQId'+question.getId()}"-->
-            <!--                   th:name="${'studentAnswerQId'+question.getId()}"-->
-            <!--                   th:value="${question.getStudentAnswer()}"-->
-            <!--                   maxlength="2000" type="text">-->
         </div>
         <div>
             &nbsp;
         </div>
-        <div class="container questionText" th:if="${question.getQuestionType().equals('Descriptive')}">
-            <input class="btn btn-submit" name="saveQuestion" th:id="${question.getId()+','+questionNumber.index}"
+        <div class="container questionScoreInput" th:if="${question.getQuestionType().equals('Descriptive')}">
+            <label th:for="${'teacherGivenScore'+question.getId()}">Score: </label>
+            <input class="input2" min="0"
+                   th:id="${'teacherGivenScore'+question.getId()}"
+                   th:max="${question.getMaxScore()}"
+                   th:name="${'teacherGivenScore'+question.getId()}" th:value="${question.getScore()}" type="number">
+
+            <input class="btn btn-submit" name="saveScore" th:id="${question.getId()}"
                    type="button" value="save score">
+            <p class="error" th:id="${'error'+question.getId()}"></p>
         </div>
 
 
