remove static links and add th:href links to css files

--- a/src/main/resources/templates/confirm-users.html
+++ b/src/main/resources/templates/confirm-users.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <link rel="stylesheet" th:href="@{/css/filter.css}"/>
     <link rel="stylesheet" th:href="@{/css/input.css}"/>
+
+    <!--    <link rel="stylesheet" href="/static/css/ticketStyle.css"/>-->
+    <!--    <link rel="stylesheet" href="/static/css/style.css"/>-->
+    <!--    <link rel="stylesheet" href="/static/css/filter.css"/>-->
+    <!--    <link rel="stylesheet" href="/static/css/input.css"/>-->
     <!--    <script language="JavaScript" type="text/javascript"  th:src="@{/js/jquery-3.6.0.min.js}"></script>-->
     <script
             crossorigin="anonymous"
